--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,7 +11,7 @@ $twimp-blue: #59a7a7;
 body,
 html {
   height: 100vh;
-  background-color: rgb(18, 18, 18);
+  // background-color: rgb(18, 18, 18);
 }
 
 #game {
