--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,6 +10,19 @@ $twimp-green: #bac94a;
 $twimp-light-blue: #97d7c7;
 $twimp-blue: #59a7a7;
 
+.leaflet-container {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  position: absolute;
+  inset: 0;
+}
+
+.leaflet-control-container {
+  position: relative;
+  z-index: 2;
+}
+
 .markdown-body {
   ol,
   ul {
